# group-project-ruby

./: .gitignore  README.md  dashboard.py  function_app.py  prediction.py  pyproject.toml  requirements.txt  streamlit_app.py
.devcontainer/: devcontainer.json
.github/workflows/: container.yaml  quality.yaml
models/: telco_logistic_regression.joblib
notebooks/: telco_marimo.py
tests/: test_prediction.py
