[project]
name = "telco-churn-predictions"
version = "0.1.0"
description = "Predicting churn in a telco"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "joblib>=1.5.2",
    "marimo>=0.17.8",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]
