[project]
name = "telco-churn-predictions"
version = "0.1.0"
description = "Predicting churn in a telco"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-functions>=1.24.0",
    "joblib>=1.5.2",
    "marimo>=0.17.8",
    "pandas>=2.3.3",
    "predictions>=1.0.2",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "streamlit>=1.52.1",
]

[dependency-groups]
dev = [
    "marimo>=0.17.8",
    "pytest>=9.0.1",
]
